// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MolocoMCM's search destination action: all fields 1`] = `
Object {
  "channel_type": "QU&z)xa*1BQiwC(",
  "device": Object {
    "advertising_id": "QU&z)xa*1BQiwC(",
    "ip": "QU&z)xa*1BQiwC(",
    "language": "QU&z)xa*1BQiwC(",
    "model": "QU&z)xa*1BQiwC(",
    "os": "QU&Z)XA*1BQIWC(",
    "os_version": "QU&z)xa*1BQiwC(",
    "ua": "QU&z)xa*1BQiwC(",
    "unique_device_id": "QU&z)xa*1BQiwC(",
  },
  "event_type": "SEARCH",
  "id": "QU&z)xa*1BQiwC(",
  "items": Array [
    Object {
      "id": "QU&z)xa*1BQiwC(",
      "price": Object {
        "amount": 30997571656744.96,
        "currency": "AUD",
      },
      "quantity": 3099757165674496,
      "seller_id": "QU&z)xa*1BQiwC(",
    },
  ],
  "page_id": "QU&z)xa*1BQiwC(",
  "referrer_page_id": "QU&z)xa*1BQiwC(",
  "search_query": "QU&z)xa*1BQiwC(",
  "session_id": "QU&z)xa*1BQiwC(",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "QU&z)xa*1BQiwC(",
}
`;

exports[`Testing snapshot for MolocoMCM's search destination action: required fields 1`] = `
Object {
  "channel_type": "QU&z)xa*1BQiwC(",
  "event_type": "SEARCH",
  "id": "QU&z)xa*1BQiwC(",
  "page_id": "QU&z)xa*1BQiwC(",
  "referrer_page_id": "QU&z)xa*1BQiwC(",
  "search_query": "QU&z)xa*1BQiwC(",
  "session_id": "QU&z)xa*1BQiwC(",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "QU&z)xa*1BQiwC(",
}
`;
